<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#CC000000"/>

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/firstName"
        android:hint="@string/first_name"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/lastName"
        android:hint="@string/last_name"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Msg_have_account"/>
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/loginNowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Msg_login_now"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>